--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movies-explorer-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "movies backend diploma",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon app.js",
